# Eurus

./: .coverage  .gitignore  Makefile  Procfile  README.md  __init__.py  alembic.ini  pyproject.toml  requirements.dev.txt  requirements.txt  schema.sql  settings.py  setup.py  test.db
.cursor/rules/: tech-stack.mdc  uv.mdc
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 79acc29a6616_create_transcripts_table.py
app/: main.py  middleware.py
app.egg-info/: SOURCES.txt
app/ai-tool/: agents.py
app/ai_tool/: agents.py  output_formats.py  system_prompts.py
app/api/: core.py  deps.py  endpoints.py  space.py
app/core/: config.py  logging.py
app/dal/: transcript.py
app/db/: base.py  base_class.py  deps.py  init_db.py  session.py  test_db.py
app/db/migrations/: add_unique_constraint.py
app/models/: space.py  transcript.py
app/schema/: lesson_planning.py  space.py  transcript.py
app/services/: lesson_planning.py  lessonspace.py  transcription.py
app/utils/: config.py  dataclass.py  logging.py  settings.py
docs/: index.html  openapi.json
scripts/: generate_docs.py
tests/: conftest.py  setup_test_db.py  test_api.py  test_schema.py  test_transcript_dal.py  test_transcription_service.py  test_webhooks.py
tests/ai_tool/: test_agents.py
tests/api/: test_core.py  test_space_routes.py
tests/app/: test_main_app.py
tests/dal/: test_transcript_dal.py
tests/db/: test_misc_db.py
tests/middleware/: test_api_key_middleware.py
tests/models/: test_transcript_model.py
tests/services/: test_lesson_planning_service.py  test_lessonspace.py  test_transcription.py  test_transcription_more.py
tests/utils/: test_dataclass.py  test_logging.py  test_logging_more.py
