[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = [
    "."
]

[tool.ruff]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "Q",
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"
docstring-quotes = "double"  # Keep docstrings as double quotes (recommended)
avoid-escape = true

[project]
name = "eurus"
version = "0.1.0"
description = "LessonSpace Integration Service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "gunicorn>=21.2.0",
    "celery==5.3.6",
    "redis>=5.0.1",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "logfire[fastapi]>=0.1.0",
    "sentry-sdk==1.40.4",
    "httpx>=0.26.0",
    "email-validator>=2.2.0",
    "psycopg2-binary>=2.9.10",
    "sqlmodel==0.0.24",
]

[dependency-groups]
# Development-only dependencies (installed with: `uv pip install --group dev` or `uv pip install -e .[dev]`)
dev = [
    "pytest==8.0.2",
    "pytest-sugar==1.0.0",
    "pytest-cov==4.1.0",
    "pytest-asyncio==0.23.5",
    "ruff==0.3.0",
    "ipython==8.22.2",
    "black==24.2.0",
    "mypy==1.8.0",
    "pre-commit==3.6.2",
]
